dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/borzoi.h)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(borZoi, 1.0.2)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

dnl Initialize libtool
AM_PROG_LIBTOOL

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CXX

AC_ARG_ENABLE(ntl,
  [  --enable-ntl           use the ntl library instead of the default math routines])
AM_CONDITIONAL(USE_NTL, test "x$enable_ntl" = xyes)

if test "$GCC" = yes; then
	CFLAGS="$CFLAGS -Wall -pedantic"
fi

BORZOI_LIBS="../src/libborzoi.la"
if test "x$enable_ntl" = "xyes"; then
	CFLAGS="$CFLAGS -DUSE_NTL"
	CXXFLAGS="$CXXFLAGS -DUSE_NTL"
  	BORZOI_SOURCES="$BORZOI_SOURCES math_ntl.cpp"
  	BORZOI_DEPENDENCIES="$BORZOI_DEPENDENCIES math_ntl.lo"
  	BORZOI_LIBS="$BORZOI_LIBS -lntl"
else
	CFLAGS="$CFLAGS -DUSE_MPI"
	CXXFLAGS="$CXXFLAGS -DUSE_MPI"
  	BORZOI_SOURCES="$BORZOI_SOURCES math_mpi.cpp mpi.c mpi.h"
  	BORZOI_DEPENDENCIES="$BORZOI_DEPENDENCIES math_mpi.lo mpi.lo"
  	BORZOI_LIBS="$BORZOI_LIBS"
fi
AC_SUBST(BORZOI_SOURCES)
AC_SUBST(BORZOI_DEPENDENCIES)
AC_SUBST(BORZOI_LIBS)

dnl Checks for header files.
AC_HEADER_STDC

AC_OUTPUT([
Makefile
docs/Makefile
src/Makefile
])
